# GlideKV

./: .bazelrc  .gitignore  BUILD  MANIFEST.in  README.md  WORKSPACE  aero_client.py  configure  configure.py  glidekv.env  monitor_glidekv_metrics.py  prometheus_queries.md  pyproject.toml  requirements.txt  setup.py  tf_framework_repo.bzl  write_test_data.py
GlideKV/: BUILD  __init__.py  lookup_ops.py
GlideKV/kernel_test/: BUILD  test_main.cc  test_tbb_cache.cc
GlideKV/kernels/: aerospike_reader.cc  aerospike_reader.cpp  aerospike_reader.h  data_loader.h  glidekv_prometheus_metrics.h  lookup_interface_stub.h  lookup_table_op.cc  metric_configs.h  system_monitor.cc  system_monitor.h  tbb_cache.h  thread_local_random.cc  thread_local_random.h
GlideKV/ops/: lookup_ops.cc
third_party_glidekv/: aerospike_client_c.BUILD  tbb.BUILD
